Fixed sidebar overflowing on resize.

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -14,7 +14,6 @@ a {
 }
 
 .myFace {
-  margin-top: 80%;
   margin-bottom: 10px;
 }
 
